--- a/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
+++ b/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-1.ipynb
@@ -15,11 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = (\"I\",)\n",
+    "\n",
+    "print(tup)"
    ]
   },
   {
@@ -33,11 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(type(tup))\n"
    ]
   },
   {
@@ -55,13 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n",
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "var = [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "\n",
+    "#tup.append(var)\n",
+    "#print(tup)\n",
+    "\n",
+    "tup_list = list(tup)\n",
+    "\n",
+    "for i in range(len(var)):\n",
+    "    tup_list.append(var[i])\n",
+    "    \n",
+    "print(tup_list)\n",
+    "\n",
+    "tup = tuple(tup_list)\n",
+    "print(tup)\n",
+    "\n",
+    "# Your explanation here\n",
+    "#We can't append anything to a dict but we can modify the dict into a list and then append through a loop\n",
+    "       \n"
    ]
   },
   {
@@ -79,13 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-88ea313fec4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"lol\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Your explanation here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup[0]=\"lol\"\n",
+    "print(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "\n",
+    "#No because a Tuple is immutable \n"
    ]
   },
   {
@@ -103,11 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1 = tup[:4]\n",
+    "tup2 = tup[-4:]\n",
+    "\n",
+    "print(tup1)\n",
+    "print(tup2)"
    ]
   },
   {
@@ -121,11 +198,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "print(tup3)\n",
+    "\n",
+    "#YES it's equal to tup\n"
    ]
   },
   {
@@ -137,11 +228,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "There are 8 elements in tup3 comme dans tup1 + tup2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sum_tup1_tup2 = len(tup1)+len(tup2)\n",
+    "\n",
+    "print(sum_tup1_tup2)\n",
+    "\n",
+    "print(\"There are\", len(tup3),\"elements in tup3 comme dans tup1 + tup2\")\n"
    ]
   },
   {
@@ -153,11 +258,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "letter: I index: 0\n",
+      "letter: r index: 1\n",
+      "letter: o index: 2\n",
+      "letter: n index: 3\n",
+      "letter: h index: 4\n",
+      "letter: a index: 5\n",
+      "letter: c index: 6\n",
+      "letter: k index: 7\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "for i in range(len(tup3)):\n",
+    "    print(\"letter:\",tup3[i],\"index:\",i)\n",
+    "    \n",
+    "#Answer : index => 4"
    ]
   },
   {
@@ -177,11 +302,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n",
+      "true\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in range(len(letters)):\n",
+    "    if letters[i] in tup3:\n",
+    "        print(\"true\")\n",
+    "    else :\n",
+    "        print(\"false\")\n",
+    "        \n",
+    "#Question : Print True VS return True?"
    ]
   },
   {
@@ -195,12 +341,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The letter a appears 1 times in tup3.\n",
+      "The letter b appears 0 times in tup3.\n",
+      "The letter c appears 1 times in tup3.\n",
+      "The letter d appears 0 times in tup3.\n",
+      "The letter e appears 0 times in tup3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "for i in range(len(letters)):\n",
+    "    print(\"The letter\",letters[i],\"appears\",tup3.count(letters[i]),\"times in tup3.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
