--- a/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
+++ b/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[77, 63, 55, 79, 49, 22, 85, 21, 0, 33, 80, 83, 90, 11, 95, 5, 15, 76, 84, 56, 16, 23, 46, 30, 34, 60, 50, 44, 8, 69, 51, 14, 3, 20, 92, 2, 82, 35, 42, 81, 27, 87, 88, 71, 12, 70, 26, 53, 61, 19, 97, 99, 38, 45, 96, 65, 68, 4, 10, 98, 75, 31, 41, 29, 89, 74, 64, 43, 17, 1, 93, 28, 9, 7, 67, 58, 94, 24, 62, 66]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(0,100),80)\n",
+    "\n",
+    "print(sample_list_1)\n",
+    "\n",
+    "#The random.sample() returns a list of unique elements "
    ]
   },
   {
@@ -54,11 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 20, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 33, 34, 35, 38, 41, 42, 43, 44, 45, 46, 49, 50, 51, 53, 55, 56, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 74, 75, 76, 77, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -77,11 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18, 88, 62, 42, 44, 29, 63, 16, 33, 74, 62, 49, 40, 86, 84, 67, 32, 6, 21, 54, 65, 37, 39, 25, 25, 85, 21, 22, 35, 87, 30, 14, 21, 72, 58, 10, 34, 35, 95, 57, 5, 23, 54, 81, 82, 22, 76, 58, 43, 33, 26, 96, 71, 85, 55, 92, 58, 35, 32, 34, 94, 14, 20, 84, 78, 69, 65, 24, 90, 80, 75, 46, 10, 39, 0, 32, 56, 91, 60, 61]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randrange(0, 100))\n",
+    "    \n",
+    "print(sample_list_2)\n",
+    "    "
    ]
   },
   {
@@ -93,11 +132,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 5, 6, 10, 14, 16, 18, 20, 21, 22, 23, 24, 25, 26, 29, 30, 32, 33, 34, 35, 37, 39, 40, 42, 43, 44, 46, 49, 54, 55, 56, 57, 58, 60, 61, 62, 63, 65, 67, 69, 71, 72, 74, 75, 76, 78, 80, 81, 82, 84, 85, 86, 87, 88, 90, 91, 92, 94, 95, 96}\n",
+      "60\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "print(set2)\n",
+    "print(len(set2))\n",
+    "\n",
+    "#Nope goes from 80 to 50"
    ]
   },
   {
@@ -109,11 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33 is the number of elements that are uniques in set1, detail : {1, 2, 3, 4, 7, 8, 9, 11, 12, 15, 17, 19, 27, 28, 31, 38, 41, 45, 50, 51, 53, 64, 66, 68, 70, 77, 79, 83, 89, 93, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set3 = set1 - set2    \n",
+    "print(len(set3),\"is the number of elements that are uniques in set1, detail :\",set3)"
    ]
   },
   {
@@ -125,11 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 is the number of elements that are uniques in set2, detail : {32, 37, 6, 39, 40, 72, 78, 18, 54, 86, 25, 91, 57}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2 - set1\n",
+    "print(len(set4),\"is the number of elements that are uniques in set2, detail :\",set4)"
    ]
   },
   {
@@ -141,11 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47 is the number of elements that are shared between set1 and set2, detail : {0, 5, 10, 14, 16, 20, 21, 22, 23, 24, 26, 29, 30, 33, 34, 35, 42, 43, 44, 46, 49, 55, 56, 58, 60, 61, 62, 63, 65, 67, 69, 71, 74, 75, 76, 80, 81, 82, 84, 85, 87, 88, 90, 92, 94, 95, 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1 & set2\n",
+    "print(len(set5),\"is the number of elements that are shared between set1 and set2, detail :\",set5)"
    ]
   },
   {
@@ -165,11 +250,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "60\n",
+      "33\n",
+      "13\n",
+      "47\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))\n",
+    "\n",
+    "#Didn't understand"
    ]
   },
   {
@@ -181,11 +285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6= set()"
    ]
   },
   {
@@ -197,11 +302,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size: 80 detail: {0, 1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 20, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 33, 34, 35, 38, 41, 42, 43, 44, 45, 46, 49, 50, 51, 53, 55, 56, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 74, 75, 76, 77, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "\n",
+    "print(\"size:\",len(set6),\"detail:\",set6)"
    ]
   },
   {
@@ -213,11 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1==set6)"
    ]
   },
   {
@@ -229,11 +355,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1.issubset(set2))\n",
+    "print(set1.issubset(set3))"
    ]
   },
   {
@@ -247,11 +384,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93\n",
+      "93\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set7 = set3.union(set4,set5)\n",
+    "print(len(set7))\n",
+    "\n",
+    "set8 = set1.union(set2)\n",
+    "print(len(set8))\n",
+    "\n",
+    "print(len(set7)==len(set8))"
    ]
   },
   {
@@ -263,11 +417,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "{1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 19, 20, 21, 22, 23, 24, 26, 27, 28, 29, 30, 31, 33, 34, 35, 38, 41, 42, 43, 44, 45, 46, 49, 50, 51, 53, 55, 56, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 74, 75, 76, 77, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "79\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#print(set1.pop()) => off to continue testing\n",
+    "print(set1)\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -283,12 +450,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 29, 30, 32, 34, 36, 37, 39, 40, 41, 42, 44, 45, 46, 47, 48, 51, 52, 53, 54, 56, 57, 58, 61, 62, 63, 64, 65, 66, 67, 68, 70, 71, 72, 73, 74, 75, 77, 78, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 91, 92, 93, 95, 97, 98}\n",
+      "{0, 2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 17, 18, 20, 22, 23, 24, 25, 26, 27, 30, 32, 34, 36, 37, 40, 42, 44, 45, 46, 47, 48, 52, 53, 54, 56, 57, 58, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 75, 77, 78, 80, 82, 83, 84, 85, 87, 88, 92, 93, 95, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "print(set1)\n",
+    "\n",
+    "for i in range(len(list_to_remove)):\n",
+    "    if list_to_remove[i] in set1:\n",
+    "        set1.remove(list_to_remove[i])\n",
+    "        \n",
+    "print(set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
