--- a/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
+++ b/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-2.ipynb
@@ -450,28 +450,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 29, 30, 32, 34, 36, 37, 39, 40, 41, 42, 44, 45, 46, 47, 48, 51, 52, 53, 54, 56, 57, 58, 61, 62, 63, 64, 65, 66, 67, 68, 70, 71, 72, 73, 74, 75, 77, 78, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 91, 92, 93, 95, 97, 98}\n",
-      "{0, 2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 17, 18, 20, 22, 23, 24, 25, 26, 27, 30, 32, 34, 36, 37, 40, 42, 44, 45, 46, 47, 48, 52, 53, 54, 56, 57, 58, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 74, 75, 77, 78, 80, 82, 83, 84, 85, 87, 88, 92, 93, 95, 97, 98}\n"
+      "{2, 3, 4, 5, 7, 8, 10, 12, 14, 15, 16, 17, 20, 22, 23, 24, 26, 27, 28, 30, 33, 34, 35, 38, 42, 43, 44, 45, 46, 50, 53, 55, 56, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 74, 75, 76, 77, 80, 82, 83, 84, 85, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98}\n",
+      "62\n",
+      "{2, 3, 4, 5, 7, 8, 10, 12, 14, 15, 16, 17, 20, 22, 23, 24, 26, 27, 28, 30, 33, 34, 35, 38, 42, 43, 44, 45, 46, 50, 53, 55, 56, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 74, 75, 76, 77, 80, 82, 83, 84, 85, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98}\n",
+      "62\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
     "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
-    "print(set1)\n",
     "\n",
     "for i in range(len(list_to_remove)):\n",
     "    if list_to_remove[i] in set1:\n",
     "        set1.remove(list_to_remove[i])\n",
     "        \n",
-    "print(set1)\n"
+    "print(set1)\n",
+    "print(len(set1))\n"
    ]
   },
   {
