--- a/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-3.ipynb
+++ b/Labs/module_1/Dicts-Sets-Tuples/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 8, 'about': 1, 'all': 1, 'although': 3, 'and': 23, 'are': 1, 'at': 1, 'baby': 14, 'backseat': 1, 'bag': 1, 'bar': 1, 'be': 16, 'bedsheets': 3, 'begin': 1, 'best': 1, 'body': 17, 'boy': 2, 'brand': 6, 'can': 1, 'chance': 1, 'club': 1, 'come': 37, 'conversation': 1, 'crazy': 2, 'dance': 1, 'date': 1, 'day': 6, 'discovering': 6, 'do': 3, 'doing': 2, \"don't\": 2, 'drinking': 1, 'driver': 1, 'eat': 1, 'every': 6, 'falling': 3, 'family': 1, 'fast': 1, 'fill': 2, 'find': 1, 'first': 1, 'follow': 6, 'for': 3, 'friends': 1, 'get': 1, 'girl': 2, 'give': 1, 'go': 2, 'going': 1, 'grab': 2, 'hand': 1, 'handmade': 2, 'heart': 3, 'hours': 2, 'how': 1, 'i': 6, \"i'll\": 1, \"i'm\": 23, 'in': 27, 'is': 5, \"isn't\": 1, 'it': 1, 'jukebox': 1, 'just': 1, 'kiss': 1, 'know': 2, 'last': 3, 'lead': 6, 'leave': 1, 'let': 1, \"let's\": 2, 'like': 10, 'love': 25, 'lover': 1, 'magnet': 3, 'make': 1, 'man': 1, 'may': 2, 'me': 10, 'mind': 2, 'much': 2, 'my': 33, 'new': 6, 'night': 3, 'not': 2, 'now': 11, 'of': 6, 'okay': 1, 'on': 40, 'one': 1, 'our': 1, 'out': 1, 'over': 1, 'place': 1, 'plate': 1, 'play': 1, 'pull': 3, 'push': 3, 'put': 3, 'radio': 1, 'room': 3, 'say': 2, 'shape': 6, 'shots': 1, 'singing': 2, 'slow': 1, 'smell': 3, 'so': 2, 'somebody': 2, 'something': 6, 'sour': 1, 'start': 2, 'stop': 1, 'story': 1, 'sweet': 1, 'table': 1, 'take': 1, 'talk': 4, 'taxi': 1, 'tell': 1, 'that': 2, 'the': 18, 'then': 3, 'thrifty': 1, 'to': 2, 'too': 5, 'trust': 1, 'up': 3, 'van': 1, 'waist': 2, 'want': 2, 'was': 2, 'we': 7, \"we're\": 1, 'week': 1, 'were': 3, 'where': 1, 'with': 22, 'you': 16, 'your': 21}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "#print(word_freq.keys())\n",
+    "keys = list(word_freq.keys())\n",
+    "\n",
+    "#print(keys)\n",
+    "keys.sort()\n",
+    "#print(keys)\n",
+    "\n",
+    "#word_freq2 = \n",
+    "\n",
+    "word_freq2={}\n",
+    "\n",
+    "for i in range(len(keys)):\n",
+    "    word_freq2.update({keys[i]:word_freq.get(keys[i])})\n",
+    "    \n",
+    "print(word_freq2)"
    ]
   },
   {
@@ -90,12 +114,318 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('conversation', 1), (\"we're\", 1), ('plate', 1), ('sour', 1), ('jukebox', 1), ('taxi', 1), ('fast', 1), ('bag', 1), ('man', 1), ('going', 1), ('one', 1), ('backseat', 1), ('friends', 1), ('take', 1), ('play', 1), ('okay', 1), ('begin', 1), ('over', 1), ('just', 1), ('are', 1), ('tell', 1), ('drinking', 1), ('our', 1), ('where', 1), (\"i'll\", 1), ('all', 1), (\"isn't\", 1), ('make', 1), ('lover', 1), ('get', 1), ('radio', 1), ('give', 1), ('can', 1), ('club', 1), ('it', 1), ('out', 1), ('chance', 1), ('first', 1), ('table', 1), ('thrifty', 1), ('driver', 1), ('slow', 1), ('dance', 1), ('trust', 1), ('family', 1), ('week', 1), ('date', 1), ('leave', 1), ('at', 1), ('hand', 1), ('how', 1), ('eat', 1), ('about', 1), ('story', 1), ('sweet', 1), ('best', 1), ('let', 1), ('van', 1), ('shots', 1), ('place', 1), ('find', 1), ('kiss', 1), ('stop', 1), ('bar', 1), (\"don't\", 2), ('mind', 2), ('know', 2), ('so', 2), ('start', 2), ('boy', 2), ('girl', 2), ('singing', 2), ('doing', 2), ('somebody', 2), ('handmade', 2), ('may', 2), ('that', 2), ('much', 2), ('grab', 2), ('was', 2), ('say', 2), ('waist', 2), ('want', 2), (\"let's\", 2), ('not', 2), ('crazy', 2), ('go', 2), ('to', 2), ('fill', 2), ('hours', 2), ('push', 3), ('then', 3), ('put', 3), ('room', 3), ('magnet', 3), ('up', 3), ('pull', 3), ('last', 3), ('do', 3), ('smell', 3), ('although', 3), ('falling', 3), ('were', 3), ('night', 3), ('heart', 3), ('for', 3), ('bedsheets', 3), ('talk', 4), ('too', 5), ('is', 5), ('every', 6), ('new', 6), ('follow', 6), ('brand', 6), ('of', 6), ('i', 6), ('day', 6), ('lead', 6), ('shape', 6), ('discovering', 6), ('something', 6), ('we', 7), ('a', 8), ('like', 10), ('me', 10), ('now', 11), ('baby', 14), ('you', 16), ('be', 16), ('body', 17), ('the', 18), ('your', 21), ('with', 22), (\"i'm\", 23), ('and', 23), ('love', 25), ('in', 27), ('my', 33), ('come', 37), ('on', 40)]\n",
+      "('conversation', 1)\n",
+      "conversation\n",
+      "(\"we're\", 1)\n",
+      "we're\n",
+      "('plate', 1)\n",
+      "plate\n",
+      "('sour', 1)\n",
+      "sour\n",
+      "('jukebox', 1)\n",
+      "jukebox\n",
+      "('taxi', 1)\n",
+      "taxi\n",
+      "('fast', 1)\n",
+      "fast\n",
+      "('bag', 1)\n",
+      "bag\n",
+      "('man', 1)\n",
+      "man\n",
+      "('going', 1)\n",
+      "going\n",
+      "('one', 1)\n",
+      "one\n",
+      "('backseat', 1)\n",
+      "backseat\n",
+      "('friends', 1)\n",
+      "friends\n",
+      "('take', 1)\n",
+      "take\n",
+      "('play', 1)\n",
+      "play\n",
+      "('okay', 1)\n",
+      "okay\n",
+      "('begin', 1)\n",
+      "begin\n",
+      "('over', 1)\n",
+      "over\n",
+      "('just', 1)\n",
+      "just\n",
+      "('are', 1)\n",
+      "are\n",
+      "('tell', 1)\n",
+      "tell\n",
+      "('drinking', 1)\n",
+      "drinking\n",
+      "('our', 1)\n",
+      "our\n",
+      "('where', 1)\n",
+      "where\n",
+      "(\"i'll\", 1)\n",
+      "i'll\n",
+      "('all', 1)\n",
+      "all\n",
+      "(\"isn't\", 1)\n",
+      "isn't\n",
+      "('make', 1)\n",
+      "make\n",
+      "('lover', 1)\n",
+      "lover\n",
+      "('get', 1)\n",
+      "get\n",
+      "('radio', 1)\n",
+      "radio\n",
+      "('give', 1)\n",
+      "give\n",
+      "('can', 1)\n",
+      "can\n",
+      "('club', 1)\n",
+      "club\n",
+      "('it', 1)\n",
+      "it\n",
+      "('out', 1)\n",
+      "out\n",
+      "('chance', 1)\n",
+      "chance\n",
+      "('first', 1)\n",
+      "first\n",
+      "('table', 1)\n",
+      "table\n",
+      "('thrifty', 1)\n",
+      "thrifty\n",
+      "('driver', 1)\n",
+      "driver\n",
+      "('slow', 1)\n",
+      "slow\n",
+      "('dance', 1)\n",
+      "dance\n",
+      "('trust', 1)\n",
+      "trust\n",
+      "('family', 1)\n",
+      "family\n",
+      "('week', 1)\n",
+      "week\n",
+      "('date', 1)\n",
+      "date\n",
+      "('leave', 1)\n",
+      "leave\n",
+      "('at', 1)\n",
+      "at\n",
+      "('hand', 1)\n",
+      "hand\n",
+      "('how', 1)\n",
+      "how\n",
+      "('eat', 1)\n",
+      "eat\n",
+      "('about', 1)\n",
+      "about\n",
+      "('story', 1)\n",
+      "story\n",
+      "('sweet', 1)\n",
+      "sweet\n",
+      "('best', 1)\n",
+      "best\n",
+      "('let', 1)\n",
+      "let\n",
+      "('van', 1)\n",
+      "van\n",
+      "('shots', 1)\n",
+      "shots\n",
+      "('place', 1)\n",
+      "place\n",
+      "('find', 1)\n",
+      "find\n",
+      "('kiss', 1)\n",
+      "kiss\n",
+      "('stop', 1)\n",
+      "stop\n",
+      "('bar', 1)\n",
+      "bar\n",
+      "(\"don't\", 2)\n",
+      "don't\n",
+      "('mind', 2)\n",
+      "mind\n",
+      "('know', 2)\n",
+      "know\n",
+      "('so', 2)\n",
+      "so\n",
+      "('start', 2)\n",
+      "start\n",
+      "('boy', 2)\n",
+      "boy\n",
+      "('girl', 2)\n",
+      "girl\n",
+      "('singing', 2)\n",
+      "singing\n",
+      "('doing', 2)\n",
+      "doing\n",
+      "('somebody', 2)\n",
+      "somebody\n",
+      "('handmade', 2)\n",
+      "handmade\n",
+      "('may', 2)\n",
+      "may\n",
+      "('that', 2)\n",
+      "that\n",
+      "('much', 2)\n",
+      "much\n",
+      "('grab', 2)\n",
+      "grab\n",
+      "('was', 2)\n",
+      "was\n",
+      "('say', 2)\n",
+      "say\n",
+      "('waist', 2)\n",
+      "waist\n",
+      "('want', 2)\n",
+      "want\n",
+      "(\"let's\", 2)\n",
+      "let's\n",
+      "('not', 2)\n",
+      "not\n",
+      "('crazy', 2)\n",
+      "crazy\n",
+      "('go', 2)\n",
+      "go\n",
+      "('to', 2)\n",
+      "to\n",
+      "('fill', 2)\n",
+      "fill\n",
+      "('hours', 2)\n",
+      "hours\n",
+      "('push', 3)\n",
+      "push\n",
+      "('then', 3)\n",
+      "then\n",
+      "('put', 3)\n",
+      "put\n",
+      "('room', 3)\n",
+      "room\n",
+      "('magnet', 3)\n",
+      "magnet\n",
+      "('up', 3)\n",
+      "up\n",
+      "('pull', 3)\n",
+      "pull\n",
+      "('last', 3)\n",
+      "last\n",
+      "('do', 3)\n",
+      "do\n",
+      "('smell', 3)\n",
+      "smell\n",
+      "('although', 3)\n",
+      "although\n",
+      "('falling', 3)\n",
+      "falling\n",
+      "('were', 3)\n",
+      "were\n",
+      "('night', 3)\n",
+      "night\n",
+      "('heart', 3)\n",
+      "heart\n",
+      "('for', 3)\n",
+      "for\n",
+      "('bedsheets', 3)\n",
+      "bedsheets\n",
+      "('talk', 4)\n",
+      "talk\n",
+      "('too', 5)\n",
+      "too\n",
+      "('is', 5)\n",
+      "is\n",
+      "('every', 6)\n",
+      "every\n",
+      "('new', 6)\n",
+      "new\n",
+      "('follow', 6)\n",
+      "follow\n",
+      "('brand', 6)\n",
+      "brand\n",
+      "('of', 6)\n",
+      "of\n",
+      "('i', 6)\n",
+      "i\n",
+      "('day', 6)\n",
+      "day\n",
+      "('lead', 6)\n",
+      "lead\n",
+      "('shape', 6)\n",
+      "shape\n",
+      "('discovering', 6)\n",
+      "discovering\n",
+      "('something', 6)\n",
+      "something\n",
+      "('we', 7)\n",
+      "we\n",
+      "('a', 8)\n",
+      "a\n",
+      "('like', 10)\n",
+      "like\n",
+      "('me', 10)\n",
+      "me\n",
+      "('now', 11)\n",
+      "now\n",
+      "('baby', 14)\n",
+      "baby\n",
+      "('you', 16)\n",
+      "you\n",
+      "('be', 16)\n",
+      "be\n",
+      "('body', 17)\n",
+      "body\n",
+      "('the', 18)\n",
+      "the\n",
+      "('your', 21)\n",
+      "your\n",
+      "('with', 22)\n",
+      "with\n",
+      "(\"i'm\", 23)\n",
+      "i'm\n",
+      "('and', 23)\n",
+      "and\n",
+      "('love', 25)\n",
+      "love\n",
+      "('in', 27)\n",
+      "in\n",
+      "('my', 33)\n",
+      "my\n",
+      "('come', 37)\n",
+      "come\n",
+      "('on', 40)\n",
+      "on\n",
+      "{'conversation': 1, \"we're\": 1, 'plate': 1, 'sour': 1, 'jukebox': 1, 'taxi': 1, 'fast': 1, 'bag': 1, 'man': 1, 'going': 1, 'one': 1, 'backseat': 1, 'friends': 1, 'take': 1, 'play': 1, 'okay': 1, 'begin': 1, 'over': 1, 'just': 1, 'are': 1, 'tell': 1, 'drinking': 1, 'our': 1, 'where': 1, \"i'll\": 1, 'all': 1, \"isn't\": 1, 'make': 1, 'lover': 1, 'get': 1, 'radio': 1, 'give': 1, 'can': 1, 'club': 1, 'it': 1, 'out': 1, 'chance': 1, 'first': 1, 'table': 1, 'thrifty': 1, 'driver': 1, 'slow': 1, 'dance': 1, 'trust': 1, 'family': 1, 'week': 1, 'date': 1, 'leave': 1, 'at': 1, 'hand': 1, 'how': 1, 'eat': 1, 'about': 1, 'story': 1, 'sweet': 1, 'best': 1, 'let': 1, 'van': 1, 'shots': 1, 'place': 1, 'find': 1, 'kiss': 1, 'stop': 1, 'bar': 1, \"don't\": 2, 'mind': 2, 'know': 2, 'so': 2, 'start': 2, 'boy': 2, 'girl': 2, 'singing': 2, 'doing': 2, 'somebody': 2, 'handmade': 2, 'may': 2, 'that': 2, 'much': 2, 'grab': 2, 'was': 2, 'say': 2, 'waist': 2, 'want': 2, \"let's\": 2, 'not': 2, 'crazy': 2, 'go': 2, 'to': 2, 'fill': 2, 'hours': 2, 'push': 3, 'then': 3, 'put': 3, 'room': 3, 'magnet': 3, 'up': 3, 'pull': 3, 'last': 3, 'do': 3, 'smell': 3, 'although': 3, 'falling': 3, 'were': 3, 'night': 3, 'heart': 3, 'for': 3, 'bedsheets': 3, 'talk': 4, 'too': 5, 'is': 5, 'every': 6, 'new': 6, 'follow': 6, 'brand': 6, 'of': 6, 'i': 6, 'day': 6, 'lead': 6, 'shape': 6, 'discovering': 6, 'something': 6, 'we': 7, 'a': 8, 'like': 10, 'me': 10, 'now': 11, 'baby': 14, 'you': 16, 'be': 16, 'body': 17, 'the': 18, 'your': 21, 'with': 22, \"i'm\": 23, 'and': 23, 'love': 25, 'in': 27, 'my': 33, 'come': 37, 'on': 40}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "word_freq2={}\n",
+    "\n",
+    "import operator\n",
+    "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "print(sorted_tups)\n",
+    "\n",
+    "for i in range(len(sorted_tups)):\n",
+    "    word_freq2.update({sorted_tups[i][0]:sorted_tups[i][1]})\n",
+    "\n",
+    "print(word_freq2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -114,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
