--- a/Labs/module_1/List-Comprehension/your-code/main.ipynb
+++ b/Labs/module_1/List-Comprehension/your-code/main.ipynb
@@ -11,11 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/wawa/0323_2020DATAPAR/Labs'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os;"
+    "import os;\n",
+    "\n",
+    "os.getcwd()"
    ]
   },
   {
@@ -27,10 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [i for i in range(1,51)]\n",
+    "\n",
+    "print(lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 120, 122, 124, 126, 128, 130, 132, 134, 136, 138, 140, 142, 144, 146, 148, 150, 152, 154, 156, 158, 160, 162, 164, 166, 168, 170, 172, 174, 176, 178, 180, 182, 184, 186, 188, 190, 192, 194, 196, 198, 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst2 = [i for i in range(2,201,2)]\n",
+    "\n",
+    "print(lst2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,10 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#lst_a=[]\n",
+    "\n",
+    "#for i in a:\n",
+    "    #for j in i:\n",
+    "        #lst_a.append(j)\n",
+    "\n",
+    "lst_a= [j for i in a for j in i]\n",
+    "        \n",
+    "print(lst_a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_b=[]\n",
+    "\n",
+    "for i in a:\n",
+    "    for j in i:\n",
+    "        if j >= 0.5:\n",
+    "            lst_b.append(j)\n",
+    "\n",
+    "#Generator\n",
+    "lst_b= [j for i in a for j in i if j >= 0.5]\n",
+    "print(lst_b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,10 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55867166, 0.06210792, 0.08147297, 0.82579068, 0.91512478, 0.06833034, 0.05440634, 0.65857693, 0.30296619, 0.06769833, 0.96031863, 0.51293743, 0.09143215, 0.71893382, 0.45850679, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.11434044, 0.8694668, 0.65669313, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.65368638, 0.14901286, 0.23760688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_5= [g for i in b for j in i for g in j]\n",
+    "        \n",
+    "print(lst_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08147297, 0.06833034, 0.30296619, 0.45850679, 0.11434044, 0.10708681, 0.47984544, 0.23760688]\n",
+      "[0.08147297, 0.06833034, 0.30296619, 0.45850679, 0.11434044, 0.10708681, 0.47984544, 0.23760688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_6=[]\n",
+    "\n",
+    "for i in b:\n",
+    "    for j in i:\n",
+    "        if j[2] <= 0.5:\n",
+    "            lst_6.append(j[2])\n",
+    "print(lst_6)   \n",
+    "\n",
+    "#Generator\n",
+    "lst_7= [j[2] for i in b for j in i if j[2] <= 0.5]\n",
+    "print(lst_7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,10 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sample_file_1.csv', 'sample_file_0.csv', 'sample_file_2.csv', 'sample_file_3.csv', 'sample_file_7.csv', 'sample_file_6.csv', 'sample_file_4.csv', 'sample_file_5.csv', 'sample_file_8.csv', 'sample_file_9.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.getcwd()\n",
+    "\n",
+    "file_list = [f for f in os.listdir('/Users/wawa/0323_2020DATAPAR/Labs/module_1/List-Comprehension/data')if f.endswith('.csv')]\n",
+    "\n",
+    "print(file_list)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Easy**\n",
+    " **Easy**\n",
     "- [Insert values](https://www.codewars.com/kata/invert-values)\n",
     "- [Sum Square(n)](https://www.codewars.com/kata/square-n-sum)\n",
     "- [Digitize](https://www.codewars.com/kata/digitize)\n",
@@ -189,6 +310,167 @@
     "**Advanced**\n",
     "- [Queue time counter](https://www.codewars.com/kata/queue-time-counter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a set of numbers, return the additive inverse of each. Each positive becomes negatives, and the negatives become positives.\n",
+    "\n",
+    "invert([1,2,3,4,5]) == [-1,-2,-3,-4,-5]\n",
+    "invert([1,-2,3,-4,5]) == [-1,2,-3,4,-5]\n",
+    "invert([]) == []\n",
+    "You can assume that all values are integers. Do not mutate the input array/list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, 2, -3, -4, -5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst10 = [1,-2,3,4,5]\n",
+    "\n",
+    "lst10_2 = [-i for i in lst10]\n",
+    "print(lst10_2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complete the square sum function so that it squares each number passed into it and then sums the results together.\n",
+    "\n",
+    "For example, for [1, 2, 2] it should return 9 because 1^2 + 2^2 + 2^2 = 9."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst11 = [1, 2, 2]\n",
+    "\n",
+    "lst11_2 = sum([i**2 for i in lst11])\n",
+    "\n",
+    "print(lst11_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a non-negative integer, return an array / a list of the individual digits in order.\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "123 => [1,2,3]\n",
+    "\n",
+    "1 => [1]\n",
+    "\n",
+    "8675309 => [8,6,7,5,3,0,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['8', '6', '7', '5', '3', '0', '9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 8675309\n",
+    "    \n",
+    "lst12 = list([i for i in str(x)])\n",
+    "#lst12 = list(str(x))\n",
+    "\n",
+    "print(lst12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this kata you will create a function that takes a list of non-negative integers and strings and returns a new list with the strings filtered out.\n",
+    "\n",
+    "Example\n",
+    "filter_list([1,2,'a','b']) == [1,2]\n",
+    "filter_list([1,'a','b',0,15]) == [1,0,15]\n",
+    "filter_list([1,2,'aasf','1','123',123]) == [1,2,123]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter_list=[1,'a','b',0,-10,15]\n",
+    "\n",
+    "lst_lst = [i for i in filter_list if type(i)==int and i>0]\n",
+    "print(lst_lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this kata, you will write an arithmetic list which is basically a list that contains consecutive terms in the sequence.\n",
+    "You will be given three parameters :\n",
+    "\n",
+    "`first` the first term in the sequence\n",
+    "`c` the constant that you are going to ADD ( since it is an arithmetic sequence...)\n",
+    "`l` the number of terms that should be `return`ed\n",
+    "Useful link:\n",
+    "Sequence\n",
+    "Be sure to check out my Arithmetic sequence Kata first ;)\n",
+    "Don't forget about the indexing pitfall ;)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -207,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
