--- a/Labs/module_1/Numpy/your-code/main.ipynb
+++ b/Labs/module_1/Numpy/your-code/main.ipynb
@@ -12,11 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -28,11 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.18.1'"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "np.__version__"
    ]
   },
   {
@@ -45,29 +59,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.04210229, 0.36705399, 0.69549745, 0.07035502, 0.14002006],\n",
+       "        [0.83740368, 0.03575041, 0.49118062, 0.104176  , 0.10495292],\n",
+       "        [0.26564885, 0.10235084, 0.96743155, 0.53397032, 0.10343803]],\n",
+       "\n",
+       "       [[0.83447995, 0.23080216, 0.93691392, 0.98892154, 0.84906648],\n",
+       "        [0.6027879 , 0.46658575, 0.08133113, 0.37143029, 0.246415  ],\n",
+       "        [0.65825293, 0.95542718, 0.41039014, 0.77839127, 0.49324764]]])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 1"
+    "# Method 1\n",
+    "a = np.random.random((2,3,5))\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.32574504, 0.18218025, 0.31464629, 0.73373997, 0.89471016],\n",
+       "        [0.02955906, 0.24849648, 0.09705526, 0.16370875, 0.68626114],\n",
+       "        [0.84592147, 0.5064766 , 0.02430233, 0.17491935, 0.73299369]],\n",
+       "\n",
+       "       [[0.30423206, 0.9079714 , 0.03495684, 0.3113057 , 0.67834451],\n",
+       "        [0.34971477, 0.38295244, 0.91202753, 0.40423472, 0.6726917 ],\n",
+       "        [0.9677141 , 0.34773755, 0.70657819, 0.08615539, 0.46201275]]])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 2"
+    "# Method 2\n",
+    "np.random.sample((2,3,5))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.18016772, 0.33705496, 0.70643587, 0.45023349, 0.61754948],\n",
+       "        [0.1859761 , 0.23955916, 0.51336315, 0.20849652, 0.4839876 ],\n",
+       "        [0.1064736 , 0.51243522, 0.51272532, 0.23522956, 0.6255685 ]],\n",
+       "\n",
+       "       [[0.0668891 , 0.45960408, 0.28463139, 0.02264097, 0.54155883],\n",
+       "        [0.94936437, 0.61770658, 0.86638339, 0.56592366, 0.08416874],\n",
+       "        [0.57899763, 0.36722209, 0.82348125, 0.42104554, 0.66186465]]])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Method 3"
+    "# Method 3\n",
+    "np.random.rand(2,3,5)"
    ]
   },
   {
@@ -79,11 +149,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.01129104, 0.52029189, 0.90140312, 0.01667305, 0.68066602],\n",
+       "        [0.28036821, 0.3516199 , 0.42186923, 0.6561415 , 0.89938044],\n",
+       "        [0.50017118, 0.4443848 , 0.92744094, 0.57280813, 0.67800839]],\n",
+       "\n",
+       "       [[0.28471794, 0.70248292, 0.44998465, 0.18400951, 0.22678586],\n",
+       "        [0.6688749 , 0.70211179, 0.73521602, 0.25174973, 0.14345067],\n",
+       "        [0.03084825, 0.17968132, 0.12003106, 0.16530746, 0.56759802]]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape"
    ]
   },
   {
@@ -95,11 +203,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b = np.ones((5,2,3))\n",
+    "\n",
+    "#b = np.full((5,2,3),1)"
    ]
   },
   {
@@ -111,11 +222,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2, 3)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.shape"
    ]
   },
   {
@@ -127,11 +283,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(a.size == b.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "print(a.shape == b.shape)"
    ]
   },
   {
@@ -143,11 +325,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-71-65ab5f96868b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# your answer here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#no because for addition the need to have the same shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "# your answer here"
+    "# your answer here\n",
+    "np.add(a, b)\n",
+    "\n",
+    "#no because for addition the need to have the same shape "
    ]
   },
   {
@@ -159,11 +356,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "c = b.transpose((1,2,0))\n",
+    "c.shape\n",
+    "\n",
+    "#c = np.reshape(b, (2, 3,5))"
    ]
   },
   {
@@ -175,11 +387,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.01129104, 1.52029189, 1.90140312, 1.01667305, 1.68066602],\n",
+       "        [1.28036821, 1.3516199 , 1.42186923, 1.6561415 , 1.89938044],\n",
+       "        [1.50017118, 1.4443848 , 1.92744094, 1.57280813, 1.67800839]],\n",
+       "\n",
+       "       [[1.28471794, 1.70248292, 1.44998465, 1.18400951, 1.22678586],\n",
+       "        [1.6688749 , 1.70211179, 1.73521602, 1.25174973, 1.14345067],\n",
+       "        [1.03084825, 1.17968132, 1.12003106, 1.16530746, 1.56759802]]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "d = a + c \n",
+    "d\n",
+    "\n",
+    "#Same shape"
    ]
   },
   {
@@ -191,11 +424,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.01129104 0.52029189 0.90140312 0.01667305 0.68066602]\n",
+      "  [0.28036821 0.3516199  0.42186923 0.6561415  0.89938044]\n",
+      "  [0.50017118 0.4443848  0.92744094 0.57280813 0.67800839]]\n",
+      "\n",
+      " [[0.28471794 0.70248292 0.44998465 0.18400951 0.22678586]\n",
+      "  [0.6688749  0.70211179 0.73521602 0.25174973 0.14345067]\n",
+      "  [0.03084825 0.17968132 0.12003106 0.16530746 0.56759802]]]\n",
+      "\n",
+      "\n",
+      "[[[1.01129104 1.52029189 1.90140312 1.01667305 1.68066602]\n",
+      "  [1.28036821 1.3516199  1.42186923 1.6561415  1.89938044]\n",
+      "  [1.50017118 1.4443848  1.92744094 1.57280813 1.67800839]]\n",
+      "\n",
+      " [[1.28471794 1.70248292 1.44998465 1.18400951 1.22678586]\n",
+      "  [1.6688749  1.70211179 1.73521602 1.25174973 1.14345067]\n",
+      "  [1.03084825 1.17968132 1.12003106 1.16530746 1.56759802]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "\n",
+    "print(a)\n",
+    "print('\\n')\n",
+    "print(d)\n",
+    "\n",
+    "# diff of 1 by adding the b array "
    ]
   },
   {
@@ -207,11 +469,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.01129104, 0.52029189, 0.90140312, 0.01667305, 0.68066602],\n",
+       "        [0.28036821, 0.3516199 , 0.42186923, 0.6561415 , 0.89938044],\n",
+       "        [0.50017118, 0.4443848 , 0.92744094, 0.57280813, 0.67800839]],\n",
+       "\n",
+       "       [[0.28471794, 0.70248292, 0.44998465, 0.18400951, 0.22678586],\n",
+       "        [0.6688749 , 0.70211179, 0.73521602, 0.25174973, 0.14345067],\n",
+       "        [0.03084825, 0.17968132, 0.12003106, 0.16530746, 0.56759802]]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "e = np.multiply(a, c)\n",
+    "e"
    ]
   },
   {
@@ -223,11 +504,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "print(np.subtract(a, e))\n",
+    "\n",
+    "#Yes because "
    ]
   },
   {
@@ -239,11 +537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n"
    ]
   },
   {
@@ -255,11 +556,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "f = np.empty((2,3,5))\n"
    ]
   },
   {
@@ -275,11 +577,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{<function __main__.<lambda>(x)>}"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{lambda x: 0 if x == d_min else 25 if x < d_mean else 50 if x == d_mean else 75 if x<d_max else 100}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "f = np.array(list(map(lambda x: 0 if x == d_min else 25 if x < d_mean else 50 if x == d_mean else 75 if x<d_max else 100,d.ravel()))).reshape(2,3,5)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -309,11 +633,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.01129104 1.52029189 1.90140312 1.01667305 1.68066602]\n",
+      "  [1.28036821 1.3516199  1.42186923 1.6561415  1.89938044]\n",
+      "  [1.50017118 1.4443848  1.92744094 1.57280813 1.67800839]]\n",
+      "\n",
+      " [[1.28471794 1.70248292 1.44998465 1.18400951 1.22678586]\n",
+      "  [1.6688749  1.70211179 1.73521602 1.25174973 1.14345067]\n",
+      "  [1.03084825 1.17968132 1.12003106 1.16530746 1.56759802]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  0  75  75  25  75]\n",
+      "  [ 25  25  25  75  75]\n",
+      "  [ 75  75 100  75  75]]\n",
+      "\n",
+      " [[ 25  75  75  25  25]\n",
+      "  [ 75  75  75  25  25]\n",
+      "  [ 25  25  25  25  75]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f)"
    ]
   },
   {
@@ -332,6 +694,25 @@
     "```\n",
     "**Note**: you don't have to use Numpy in this question."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-153-8c22e654d360>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -359,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
