--- a/Labs/module_2/Confidence-Intervals/your-code/main.ipynb
+++ b/Labs/module_2/Confidence-Intervals/your-code/main.ipynb
@@ -9,11 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries"
+    "# Libraries\n",
+    "from scipy import stats\n",
+    "from scipy.stats import norm\n",
+    "import numpy as np\n",
+    "from scipy.stats import t"
    ]
   },
   {
@@ -32,11 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(173.12491958252144, 173.8084137508119)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "#80% est 1.282 \n",
+    "\n",
+    "heights = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
+    "\n",
+    "mu = sum(heights)/len(heights)\n",
+    "\n",
+    "std = 4\n",
+    "\n",
+    "alpha = 1 - 0.2\n",
+    "\n",
+    "confidence_interval = stats.norm.interval(alpha, loc=mu, scale=std/len(heights))\n",
+    "confidence_interval"
    ]
   },
   {
@@ -51,11 +78,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2815515655446004"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "\n",
+    "total_shops =105\n",
+    "shops_lossing = 27\n",
+    "score_80=st.norm.interval(0.8)[1]\n",
+    "score_80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2571428571428571"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu=shops_lossing/total_shops\n",
+    "mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "sigma=(mu*(1-mu)/total_shops)**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.20248138545542083, 0.3118043288302934]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Method 1\n",
+    "confidence_interval=[mu-score_80*se,mu+score_80*sigma]\n",
+    "confidence_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.20248138545542083, 0.3118043288302934)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Method 2\n",
+    "confidence_interval = st.norm.interval(0.8,loc=mu,scale=sigma)\n",
+    "confidence_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6448536269514722"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_90=st.norm.interval(0.9)[1]\n",
+    "score_90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.1869856177645281, 0.3273000965211861)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confidence_interval = st.norm.interval(0.9,loc=mu,scale=sigma)\n",
+    "confidence_interval"
    ]
   },
   {
@@ -70,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +252,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.757818534642887, 10.242181465357113)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "#For t distribution:\n",
+    "\n",
+    "#alpha=confidence level\n",
+    "#df=degree of freedom = sample size-1\n",
+    "#loc=mean\n",
+    "#scale=std/sqr(n)\n",
+    "\n",
+    "acid = [9.8, 10.2, 10.4, 9.8, 10.0, 10.2, 9.6]\n",
+    "\n",
+    "alpha = 0.95\n",
+    "\n",
+    "mu = sum(acid)/len(acid)\n",
+    "\n",
+    "sc = np.std(acid)/len(acid)**0.5\n",
+    "\n",
+    "d_f = 6\n",
+    "\n",
+    "t.interval(alpha, df=d_f, loc=mu, scale=sc)\n"
    ]
   },
   {
@@ -187,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
